--- a/css/styles.css
+++ b/css/styles.css
@@ -18,12 +18,16 @@ font-family: 'Roboto', sans-serif; */
 
 
 body {
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
 }
 
 .link {
+  margin: 0;
   color: var(--title-text-color);
   text-decoration: none;
 }
@@ -66,10 +70,14 @@ img {
 /* css for index.html */
 
 /* page-header */
+.main-header {
+  border-bottom: 1px solid #ECECEC;
+}
 
 .page-header {
   display: flex;
   align-items: center;
+  
 }
 
 .main-nav {
@@ -147,8 +155,10 @@ img {
 .page-nav .link:focus,
 .nav-contacts .link:hover,
 .nav-contacts .link:focus, 
-.footer-contacts:hover,
-.footer-contacts:focus  {
+.footer-mail:hover,
+.footer-mail:focus,
+.footer-tel:hover,
+.footer-tel:focus  {
   color:var(--accent-color);
 }
 
@@ -190,13 +200,15 @@ img {
 
 .button {
   display: inline-block;
+  min-width: 200px;
+  min-height: 50px;
   border-radius: 4px;
   padding: 10px 32px;
-  min-width: 200px;
   background-color: var(--accent-color);  
 }
 
-.button .link {
+.button>.link {
+  display: inline-block; 
   color: var(--primary-white-color);
   font-weight: 700;
   font-size: 16px;
@@ -235,6 +247,7 @@ img {
   max-width: 100%;
   height: 120px;
   padding: 25px 100px;
+  margin: 0;
   margin-bottom: 30px;
   border-radius: 4px;
   background-color: #F5F4FA; 
@@ -246,16 +259,15 @@ img {
   color: var(--title-text-color); 
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: 1.143;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 
 .features-dicription {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
   font-size: 14px;
-  line-height: 1.71;
+  line-height: 1.72;
   letter-spacing: 0.03em;
 }
 
@@ -281,9 +293,10 @@ img {
 }
 
 .our-working {
-  margin-top: 0;
-  margin-bottom: 0;
-  width: 370px;
+  width: 100%;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  margin: 0;
   text-align: center;
   background-color: rgba(47, 48, 58, 0.8);
   color: var(--primary-white-color);
@@ -298,14 +311,11 @@ img {
 /* Our-Team */
 
 .our-team-main {
-  padding-top: 94px;
-  padding-bottom: 94px;
   background: #F5F4FA;
 }
 
 .our-team {
-  display: flex; 
-  background: #F5F4FA;
+  display: flex;   
 }
 
 .our-team>.item {
@@ -320,12 +330,15 @@ img {
   margin-right: 0;
 }
 
-.member-photo {
-  margin-bottom: 30px;
+.team-label {
+  padding-top: 30px;
+  padding-bottom: 24px;
+  padding-right: 32px;
+  padding-left: 32px;
  } 
 
 .teams-member {
-  margin-top: 0;
+  margin: 0;
   margin-bottom: 10px;
   text-align: center;
   color: var(--title-text-color);
@@ -336,7 +349,7 @@ img {
 }
 
 .occupations {
-  margin-top: 0;
+  margin: 0;
   margin-bottom: 16px;
   text-align: center;
   font-size: 16px;
@@ -344,12 +357,16 @@ img {
   letter-spacing: 0.03em;
 }
 
+.social .link {
+  display: inline-block;
+  margin: 0;
+} 
+
 .social {
   display: flex;
-  margin-top: 0;
-  margin-bottom: 24px;
-  padding-right: 32px;
-  padding-left: 32px;
+  height: 44px;
+  margin: 0;
+ 
 }
 
 .social>.item:not(:last-child) {
@@ -378,7 +395,7 @@ img {
 .customers>.item {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
   width: calc((100% - 150px)/6);
   margin-right: 30px;
   height: 90px;
@@ -406,26 +423,24 @@ img {
 
 .main-footer {
  background: #2F303A;
- padding-top: 45px;
- padding-bottom: 21px;
+ padding-top: 60px;
+ padding-bottom: 60px;
 }
 
 .page-footer {
   display: flex;
-  margin-bottom: 28px;
-  
+    
 }
 
 .footer-contacts {
   margin-top: 0;
-  margin-bottom: 46px;
   margin-right: 69px;
 }
 
-.footer-contacts>a {
+.footer-contacts .logo.link {
   display: inline-block;
   margin-top: 0;
-  margin-bottom: 8px;
+  margin-bottom: 20px;
 }
 
 .logo-footer {
@@ -433,30 +448,31 @@ img {
   
 }
 
-address {
-  font-style: normal;
-}
+
 .address {
   margin-top: 0;
-  margin-bottom: 8px;
+  margin-bottom: 9px;
   color: var(--primary-white-color);
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 
 }
 
-.footer-contacts {
+.footer-mail,
+.footer-tel {
   display: inline-block;
   margin-top: 0;
   margin-bottom: 9px;
   color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 
 }
-.footer-contacts.tel {
+.footer-tel {
   margin-bottom: 0;
 }
 
@@ -500,27 +516,9 @@ address {
   text-transform: uppercase;
 }
 
-/* footer-Developed-by */
-
-.developed {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 18px;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
-  text-align: center;
-  color: rgba(255, 255, 255, 0.4);
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.03em;
-
-}
 
 
 /* css for portfolio.html */
-
-.page-portfolio {
-  border-top: 1px solid #ECECEC;
-}
 
 /*  portfolio-filters */
 .filters-title {
@@ -584,6 +582,9 @@ address {
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
+.projects .link {
+  display: inline-block;
+}
 .projects-label {
   padding: 20px 24px;
   border-right: 1px solid #EEEEEE;
@@ -594,7 +595,7 @@ address {
 
 .project-title {
   margin-top: 0;
-  margin-bottom: 8px;
+  margin-bottom: 4px;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
